src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Moves_Manager__c</fullName>
        <label>Moves Manager (old)</label>
        <picklist>
            <picklistValues>
                <fullName>Alissa Moen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Bartlett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brett Jenks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britta Garfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Galvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Coppenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kate Mannle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katie Heffner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcia Cota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melissa Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patrick Mehlman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rafael Calderon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robin Heller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Dennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybil Greenhalgh</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Proposed_Site__c</fullName>
        <label>Name of Proposed Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_prospective_Campaign_Manager__c</fullName>
        <label>Name of prospective Campaign Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <inlineHelpText>By when will you take the next action?</inlineHelpText>
        <label>Next Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <inlineHelpText>What is the next step to be taken with the prospect?</inlineHelpText>
        <label>Next Action</label>
        <picklist>
            <picklistValues>
                <fullName>Send Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Made Gift/Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Acknowledgment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Since_Last_Contact__c</fullName>
        <formula>TODAY()  - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Last Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Advisor__c</fullName>
        <inlineHelpText>Operations advisor (as needed)
Budget support 
Legal support 
MOU support</inlineHelpText>
        <label>Operations Advisor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization (for individual donor only)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizations_Supported__c</fullName>
        <label>Organizations Supported</label>
        <picklist>
            <picklistValues>
                <fullName>American Chestnut Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Museum of Fly Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware Nature Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware Theater Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Conservancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Conservancy of Utah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermont Institute of Natural Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilmington Music School</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Organizations_Supported__c</fullName>
        <label>Other Organizations Supported</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over_how_many_years__c</fullName>
        <description>This field is used to note a multi-year gift.</description>
        <label>Over how many years?</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <formula>Ability_Rating__c  +  Interest_Rating__c  +  Link_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there planned giving information on file for this prospect?</inlineHelpText>
        <label>Planned Gift?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Giving__c</fullName>
        <label>Maximum Potential Annual Gift</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>$0-$999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000 - $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,001 - $25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,001 - $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,001 - $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,001 - $150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150,001 - $200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200,001 - $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,001 - $300,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300,001 - $350,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$350,001 - $400,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$400,001 - $450,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$450,000 - $500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,001 - $750,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$750,000 - $1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,001 - $1,250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,250,001 - $1,500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,500,001 - $2,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Relationship__c</fullName>
        <label>Potential Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic/Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Total_Gift__c</fullName>
        <description>Ho much they can give (over how many years noted in &quot;over how many years&quot; field.</description>
        <label>Potential Total Gift</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Application_Score__c</fullName>
        <description>1 is lowest, 5 is highest</description>
        <label>Pre-Application Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_City__c</fullName>
        <label>Primary Address City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_1__c</fullName>
        <label>Primary Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_2__c</fullName>
        <label>Primary Address Line 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Postal_Code__c</fullName>
        <label>Primary Address Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_RARE_Trustee_Contact__c</fullName>
        <label>Volunteer Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Angus Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anita Bekenstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Martin-Simonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Hernandez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duncan McFarland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edith McBean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edward Soule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannelore Grantham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herbert A. Raffaele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan Portman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Ellis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenneth Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexi Rome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark DiMassimo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melissa Dann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Mackinnon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Ridgely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Pasquier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruth Yeoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephanie Meeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vadim Nikitine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wendy Paulson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Reynolds</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_address_type__c</fullName>
        <label>Primary address type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>What is the Cash Quality Discount of this solicitation?
0% or Blank = Longshot / Not for Forecast
25% = New gift
75% = Renewal
100% = Pledged / Gift Received</inlineHelpText>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Programs_of_Interest_Detail__c</fullName>
        <label>Programs of Interest Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programs_of_Interest__c</fullName>
        <label>Programs of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Pride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Visits</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project interest (if applicable)</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>R00N30000001B2ipEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Interest_Codes__c</fullName>
        <inlineHelpText>What Rare-relevant interests is this prospect known to have?</inlineHelpText>
        <label>Prospect Interest Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing / Flyfishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Investing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livelihoods</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Stage__c</fullName>
        <label>Prospect Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation - Annual Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A face to face meeting has taken place with prospect to determine and qualify capacity, interest and inclination. Once prospect is qualified, prospect plan is created. There&apos;s interest &amp; ability to make $10,000+ gift to Rare (this includes current donors)</inlineHelpText>
        <label>Qualified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rare_Affiliation__c</fullName>
        <label>Rare Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Current Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rare_Geographic_Area_of_Interest__c</fullName>
        <inlineHelpText>Where is Rare currently working &amp; this prospect has expressed interest?</inlineHelpText>
        <label>Rare Geographic Area(s) of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seychelles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rare_Inclination_Rating__c</fullName>
        <label>Rare Inclination Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rare_Project_of_Interest__c</fullName>
        <inlineHelpText>Which Rare projects has this prospect expressed interest in?</inlineHelpText>
        <label>Rare Project(s) of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Ag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine (other)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rare_Range_Over_five_years__c</fullName>
        <label>Rare Range (Over five years)</label>
        <picklist>
            <picklistValues>
                <fullName>$5 million+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1 million &lt; $5 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000 &lt; $1 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000 &lt; $500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 &lt; $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 &lt; $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000 &lt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15,000 &lt; $25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 &lt; $15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 &lt; $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,500 &lt; $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1 &lt; $2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rare_Value_Proposition__c</fullName>
        <inlineHelpText>Why Rare should matter to prospect</inlineHelpText>
        <label>Rare Value Proposition</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Must Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Readiness_to_Give__c</fullName>
        <inlineHelpText>How inclined is this prospect to give to Rare?</inlineHelpText>
        <label>Readiness to Give</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Details__c</fullName>
        <label>Referral Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Contact1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>